build_log_1.9.0.txt
> Task :app:clean
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug
> Task :app:checkDebugAarMetadata
> Task :app:processDebugNavigationResources
> Task :app:compileDebugNavigationResources
> Task :app:generateDebugResValues
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources
> Task :app:packageDebugResources
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources

> Task :app:processDebugMainManifest
package="com.collegemanagementsystem" found in source AndroidManifest.xml: C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\AndroidManifest.xml.
Setting the namespace via the package attribute in the source AndroidManifest.xml is no longer supported, and the value is ignored.
Recommendation: remove package="com.collegemanagementsystem" from the source AndroidManifest.xml: C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\AndroidManifest.xml.

> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugResources
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:desugarDebugFileDependencies
> Task :app:mergeDebugJniLibFolders
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:checkDebugDuplicateClasses
> Task :app:validateSigningDebug
> Task :app:processDebugManifestForPackage
> Task :app:writeDebugAppMetadata
> Task :app:writeDebugSigningConfigVersions
> Task :app:mergeLibDexDebug
> Task :app:mergeDebugJavaResource
> Task :app:mergeExtDexDebug
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:54: error: cannot find symbol
        String createTodo = "CREATE TABLE " + TABLE_TODO + " (" +
                                              ^
  symbol:   variable TABLE_TODO
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:55: error: cannot find symbol
                COL_TODO_ID + " INTEGER PRIMARY KEY AUTOINCREMENT, " +
                ^
  symbol:   variable COL_TODO_ID
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:56: error: cannot find symbol
                COL_TASK + " TEXT)";
                ^
  symbol:   variable COL_TASK
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:111: error: cannot find symbol
        cv.put(COL_TASK, task);
               ^
  symbol:   variable COL_TASK
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:112: error: cannot find symbol
        db.insert(TABLE_TODO, null, cv);
                  ^
  symbol:   variable TABLE_TODO
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:117: error: cannot find symbol
        db.delete(TABLE_TODO, COL_TODO_ID + "=?", new String[]{String.valueOf(id)});
                  ^
  symbol:   variable TABLE_TODO
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:117: error: cannot find symbol
        db.delete(TABLE_TODO, COL_TODO_ID + "=?", new String[]{String.valueOf(id)});
                              ^
  symbol:   variable COL_TODO_ID
  location: class DBHelper
C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:122: error: cannot find symbol
        return db.rawQuery("SELECT * FROM " + TABLE_TODO, null);
                                              ^
  symbol:   variable TABLE_TODO
  location: class DBHelper
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors

[Incubating] Problems report is available at: file:///C:/Users/Dell/AndroidStudioProjects/CollegeManagementSystem/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:54: error: cannot find symbol
          String createTodo = "CREATE TABLE " + TABLE_TODO + " (" +
                                                ^
    symbol:   variable TABLE_TODO
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:55: error: cannot find symbol
                  COL_TODO_ID + " INTEGER PRIMARY KEY AUTOINCREMENT, " +
                  ^
    symbol:   variable COL_TODO_ID
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:56: error: cannot find symbol
                  COL_TASK + " TEXT)";
                  ^
    symbol:   variable COL_TASK
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:111: error: cannot find symbol
          cv.put(COL_TASK, task);
                 ^
    symbol:   variable COL_TASK
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:112: error: cannot find symbol
          db.insert(TABLE_TODO, null, cv);
                    ^
    symbol:   variable TABLE_TODO
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:117: error: cannot find symbol
          db.delete(TABLE_TODO, COL_TODO_ID + "=?", new String[]{String.valueOf(id)});
                    ^
    symbol:   variable TABLE_TODO
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:117: error: cannot find symbol
          db.delete(TABLE_TODO, COL_TODO_ID + "=?", new String[]{String.valueOf(id)});
                                ^
    symbol:   variable COL_TODO_ID
    location: class DBHelper
  C:\Users\Dell\AndroidStudioProjects\CollegeManagementSystem\app\src\main\java\com\collegemanagementsystem\DBHelper.java:122: error: cannot find symbol
          return db.rawQuery("SELECT * FROM " + TABLE_TODO, null);
                                                ^
    symbol:   variable TABLE_TODO
    location: class DBHelper
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  8 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
30 actionable tasks: 30 executed
